<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">
        <TextView
            android:id="@+id/question_field"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:text="@string/app_name"
            android:padding="24dp"
            android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/true_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_true" />
        <Button
            android:id="@+id/false_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_false"
            />
    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cheat_button"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/prev_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/button_next" />
        <ImageButton
            android:id="@+id/next_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/button_prev" />

    </LinearLayout>

</LinearLayout>
